﻿                CHANGES IN TraMineRextras VERSION 0.2.4 [2015-07-23]

New functions

    o   seqplot.rf(): Implements the Relative Frequency Sequence Plots
        introduced in Fasang and Liao (2014).

Misc

    o   revised help page for seqemlt() (distance of Rousset et al. 2012)

    o   Added required basic packages to the import statements to
        comply with R v3.3 requirements.


                CHANGES IN TraMineRextras VERSION 0.2.3 [2015-01-27]

New functions

    o   seqtabstocc(): frequencies of state co-occurrence patterns

Changes in existing functions

    o   seqgranularity(): new method "mostfreq"

    o   seqedplot(): replaced calls of TraMineR internal functions seqeage
        and TraMineR.legend with respectively
        TraMineRInternalSeqeage and TraMineRInternalLegend
        (should be transparent to the end user).


                CHANGES IN TraMineRextras VERSION 0.2.2 [2013-10-30]

    o   Fixed issue with calling Rinternals from within extern "C" {}
        in seqstart.cpp (request of B. Ripley)


                CHANGES IN TraMineRextras VERSION 0.2.1 [2013-03-15]

General

    o   NEWS now uses basic formatting rules and is saved as inst/NEWS

Bug Fixes

    o   FCE_to_TSE(): Events were not properly chronologically sorted.

    o   TSE_to_STS(): produced inconsistent results when events were
        not chronologically sorted by cases.


                CHANGES IN TraMineRextras VERSION 0.2 [2012-12-06]

General:

    o   First release on CRAN

Changes in existing functions:

    o   seqplot.tentrop() and seqplot.tentrop.m(): new argument 'cex.legend'
        for controlling legend scaling factor.

    o   seqentrans(): new option 'avg.occ'; when set as TRUE the table is
        completed with average number of occurrences of the subsequences
        in each sequence. The latter differs from the support for
        counting methods other than COBJ. Requires TraMineR 1.8-5 or higher.
