@@ -1,6 +1,6 @@
 Package: TraMineRextras
-Version: 0.2.4
-Date: 2015-07-27
+Version: 0.2.5
+Date: 2016-11-10
 Title: TraMineR Extension
 Authors@R: c(
   person("Gilbert", "Ritschard", role = c("aut", "cre", "ths", "cph"),
@@ -13,12 +13,10 @@ Authors@R: c(
 Depends: R (>= 2.8.1), TraMineR (>= 1.8-9), RColorBrewer, survival,
         cluster
 Imports: combinat, grDevices, graphics, stats
-Description: Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
+Description: Collection of ancillary functions and utilities to be used in conjunction with the 'TraMineR' package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of 'TraMineR'.
 License: GPL (>= 2)
 URL: http://traminer.unige.ch/
 Encoding: UTF-8
-NeedsCompilation: yes
-Packaged: 2015-07-23 08:25:47 UTC; adm
 Author: Gilbert Ritschard [aut, cre, ths, cph],
   Matthias Studer [aut],
   Reto Buergin [aut],
@@ -26,5 +24,7 @@ Author: Gilbert Ritschard [aut, cre, ths, cph],
   Nicolas Muller [ctb],
   Patrick Rousset [ctb]
 Maintainer: Gilbert Ritschard <gilbert.ritschard@unige.ch>
+NeedsCompilation: yes
+Packaged: 2016-11-10 07:39:01 UTC; adm
 Repository: CRAN
-Date/Publication: 2015-07-23 11:34:58
+Date/Publication: 2016-11-10 13:43:13
