@@ -1,5 +1,5 @@
-e44bfc3c7091c0bf783f86565c6a3695 *DESCRIPTION
-12cb76062ad2c0d689ad40890247771f *NAMESPACE
+ddb9a375c7d05eaec1d4baba184f910e *DESCRIPTION
+68a938a910b27e7708d5fd191adab68c *NAMESPACE
 bef7f51347882da3af275dcb7b039520 *R/FCE_to_TSE.R
 51ca4c3e07d1d4fb224e734e647516d0 *R/HSPELL_to_STS.R
 9c638bc51558c88e00e2ca8bc591779f *R/STS_to_SPELL.R
@@ -23,6 +23,7 @@ f9b4f3c1550f2d4ca4480fd1179397db *R/seqentrans.R
 a6853a757c8d2cc95a165d1029abdedb *R/seqerulesdisc.R
 153a74c30716fe7d1d3e7d35992bb4bc *R/seqgen.missing.R
 48b7f65a6c7ffc6ce1760291c4bb26be *R/seqgranularity.R
+cd40e9d03dbc1a133dfd431de05821ff *R/seqimplic.R
 5bcbd7f2ce72611a33a494ad120681f1 *R/seqplot-rf.R
 cdfadf4afcf8821eb186f88c591dc994 *R/seqplot-tentrop.R
 2f8b43a7eeaff2451410e860e29aa6c9 *R/seqrep-grp.R
@@ -32,13 +33,13 @@ cdfadf4afcf8821eb186f88c591dc994 *R/seqplot-tentrop.R
 bed83b07c3eb568de1590a64ed195415 *R/toPersonPeriod.R
 a099c3bd211c0b2fdec0da26a8994a5c *R/zzz.R
 05582b46f2fdc2b065d3bd45ba754d9c *inst/CITATION
-f2436c2f31ca9563ab50f058bbaab200 *inst/NEWS
-e0b3694535f01ccca4d51885a499651b *inst/NEWS.Rd
+692ab527d2f66410cdcd8d817a831a4a *inst/NEWS
+60f7cdebecc72673346d029e6ed82ee8 *inst/NEWS.Rd
 021e321fee2ea861a0554e0a47bb5ae1 *man/FCE_to_TSE.Rd
 382a2bd76845f861c0f23ee958ad92c8 *man/HSPELL_to_STS.Rd
 c63e84e6b3eec6dae686eef02eb02c42 *man/STS_to_SPELL.Rd
 e43e4c6a1b91bda00bc92bd44744f8c6 *man/TSE_to_STS.Rd
-233a079babbcd5deb8789981058a08da *man/TraMineRextras-package.Rd
+9d6004fbba24bfdd448db623329c52ba *man/TraMineRextras-package.Rd
 9fb1ba43405dac07447fb96a6b4d461d *man/convert.Rd
 2df4d85a7b638b9868a6ee91536dab32 *man/createdatadiscrete.Rd
 d649419cd693080e82cee7395b7cfe7b *man/ctplot.Rd
@@ -57,6 +58,7 @@ fb494c906346237cb79e1e64f5e08522 *man/seqentrans.Rd
 60c86a75c0817e9da67e05c7e47471eb *man/seqerulesdisc.Rd
 29f22fb81d08dd2c252298f1f9fa874c *man/seqgen.missing.Rd
 17cd59918659d30002be77b948a40c3e *man/seqgranularity.Rd
+634bb44ea98b9b2c0e5567f54cc474f2 *man/seqimplic.Rd
 ffff6bffa80ffbf02cd96847b2cdce2b *man/seqplot-rf.Rd
 eec44a0e989e87dea01bc5715b0c6588 *man/seqplot-tentrop.Rd
 37f523325bc5ffd9392003030a5dbb44 *man/seqrep-grp.Rd
