@@ -2,9 +2,9 @@ import(TraMineR)
 import(survival)
 import(RColorBrewer)
 importFrom("utils", "packageDescription", "packageVersion")
-importFrom("graphics", "abline", "axis", "box", "layout", "legend", "lines", "par", "plot", "points", "rect", "segments", "text", "title", "boxplot")
+importFrom("graphics", "abline", "axis", "box", "layout", "legend", "lines", "par", "plot", "points", "rect", "segments", "text", "title", "boxplot","strheight", "strwidth")
 importFrom("grDevices", "col2rgb", "hsv", "rgb", "rgb2hsv")
-importFrom("stats", "chisq.test", "cutree", "glm", "princomp", "reshape", "runif", "xtabs", "as.dist", "binomial", "cmdscale", "hclust")
+importFrom("stats", "chisq.test", "cutree", "glm", "princomp", "reshape", "runif", "xtabs", "as.dist", "binomial", "cmdscale", "hclust","pnorm", "qnorm")
 importFrom("cluster", "daisy", "pam", "agnes")
 importFrom("combinat", "permn")
 
@@ -37,12 +37,18 @@ export(
     seqauto,
     seqentrans,
     seqemlt,
+	seqimplic,
     seqtabstocc
 )
 
 ## emlt methods
 S3method(plot, emlt)
 S3method(print, emlt)
+
+## seqimplic methods
+S3method(plot, seqimplic)
+S3method(print, seqimplic)
+
 
 
 useDynLib(TraMineRextras,
