@@ -4,11 +4,11 @@
 \docType{package} 
 \title{ TraMineR Extension } 
 \description{ 
-(Version: 0.2.4) Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
+(Version: 0.3.5) Collection of ancillary functions and utilities to be used in conjunction with the TraMineR package for sequence data exploration. Most of the functions are in test phase, lack systematic consistency check of the arguments and are subject to changes. Once fully checked, some of the functions of this collection could be included in a next release of TraMineR.
 
 }
- 
-%\details{ 
+
+%\details{
 %
 %}
 
